<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EA1D2C"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.AutenticacaoActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:contentDescription="@string/imagem_ifood"
        app:srcCompat="@drawable/logo"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/editCadastroEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editCadastroSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-2dp"
        android:background="@drawable/bg_edit_text"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/textView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/logar"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/switchAcesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTipoUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textColor="@android:color/white" />

        <Switch
            android:id="@+id/switchTipoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/empresa"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonAcesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_acessar"
        android:padding="16dp"
        android:theme="@style/botaoPadrao" />
</LinearLayout>