<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ConfiguracoesUsuarioActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editUsuarioNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/nome"
            android:inputType="text"
            android:padding="16dp" />

        <EditText
            android:id="@+id/editUsuarioEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-2dp"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:hint="@string/endereco_completo"
            android:inputType="text"
            android:padding="16dp" />

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="validarDadosUsuario"
            android:padding="16dp"
            android:text="@string/salvar"
            android:theme="@style/botaoPadrao" />

    </LinearLayout>

</LinearLayout>